Changing border props on input button, thickening up points and lines; fixing invisible tooltips offscreen on resize

--- a/dev/ui/styles/query.css
+++ b/dev/ui/styles/query.css
@@ -80,15 +80,9 @@
     font-size: 0.8em;
 }
 
-
-.autocomplete {
-    position: relative;
-    display: inline-block;
-    width: 100%;
-}
-
 #queryForm input {
-    border: 1px solid lightgray;
+    border: 1px solid #F3B544;
+    border-radius: 2px;
     padding: 10px;
     font-size: 16px;
     display: inline-block;
