--- a/prod/ui/styles/query.css
+++ b/prod/ui/styles/query.css
@@ -17,21 +17,21 @@
     text-align: center;
     margin: 3px;
     display: inline-block;
-    border: 1px solid;
+    border: 2px solid;
     font-size: 1.2em;
     border-radius: 2px;
 }
 
 #ngramList .nitem:hover {
     background-color: #FAC1BE !important;
-    border: 1px dashed #EF3D25 !important;
+    border: 2px dashed #EF3D25 !important;
     text-decoration: line-through !important;
     color: #EF3D25 !important;
     cursor: pointer !important;
 }
 
 #clearall, #download {
-    border: 1px solid;
+    border: 2px solid;
     cursor: pointer;
     font-size: 0.8em !important;
     font-weight: bold;
@@ -80,15 +80,9 @@
     font-size: 0.8em;
 }
 
-
-.autocomplete {
-    position: relative;
-    display: inline-block;
-    width: 100%;
-}
-
 #queryForm input {
-    border: 1px solid transparent;
+    border: 1px solid #F3B544;
+    border-radius: 2px;
     padding: 10px;
     font-size: 16px;
     display: inline-block;
@@ -109,35 +103,6 @@
     width: 25%;
     min-width: auto;
     float: right;
-}
-
-.autocomplete-items {
-    position: absolute;
-    border: 1px solid #d4d4d4;
-    border-bottom: none;
-    border-top: none;
-    z-index: 99;
-    top: 100%;
-    left: 0;
-    right: 0;
-}
-
-.autocomplete-items div {
-    padding: 10px;
-    cursor: pointer;
-    background-color: #fff;
-    border-bottom: 1px solid #d4d4d4;
-}
-
-/*when hovering an item:*/
-.autocomplete-items div:hover {
-    background-color: #e9e9e9;
-}
-
-/*when navigating through the items using the arrow keys:*/
-.autocomplete-active {
-    background-color: DodgerBlue !important;
-    color: #ffffff;
 }
 
 #filterForm {
